# CppFourierImage

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_simple.txt  LICENSE  README.md  Readme.md  b  bt  imgui.ini  install_deps.sh  r
Include/: ComplexImage.hpp  EventSystem.hpp  FourierTransform.hpp  FourierVisualizer.hpp  ImageLoader.hpp  ImageProcessor.hpp  Renderer.hpp  RgbComplexImage.hpp  Types.hpp  UiManager.hpp
Resources/: On-Plane.jpg:Zone.Identifier
Source/: ComplexImage.cpp  FourierTransform.cpp  FourierVisualizer.cpp  ImageLoader.cpp  ImageProcessor.cpp  Main.cpp  Renderer.cpp  RgbComplexImage.cpp  UiManager.cpp
Tests/: CMakeLists.txt  TestComplexImage.cpp  TestFourierTransform.cpp  TestFourierVisualizer.cpp  TestImageLoader.cpp  TestImageProcessor.cpp
include/: fourier_transform.h  fourier_visualizer.h  image_loader.h  image_processor.h  renderer.h  ui_manager.h
src/: complex_image.cpp  fourier_transform.cpp  fourier_visualizer.cpp  image_loader.cpp  image_processor.cpp  main.cpp  renderer.cpp  ui_manager.cpp
tests/: CMakeLists.txt  test_complex_image.cpp  test_fourier_transform.cpp  test_fourier_visualizer.cpp  test_image_loader.cpp  test_image_processor.cpp
